# ai-assistant-hub

./: .env.sample  .gitignore  CHANGELOG.md  CONTRIBUTION.md  LICENSE  README.md  SECURITY.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt
docs/default/: default-md.md  default-txt.txt
src/: .env.sample  config.py  document_processor.py  health_check.py  main.py  user_config.py
tests/: test_ai_assistant.py
