# pyproject.toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-assistant-hub"
version = "1.0.0"
description = "RAG（Retrieval-Augmented Generation）ベースの AI アシスタントアプリケーション"
readme = "README.md"
authors = [
    {name = "Hiroshi Nishito", email = "developer@itc.tokyo"},
]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = [
    "aiohappyeyeballs>=2.4.4",
    "aiohttp>=3.11.11",
    "langchain>=0.3.13",
    "openai>=1.58.1",
    "python-dotenv>=1.0.1",
]

[project.urls]
"Homepage" = "https://github.com/Yulikepython/ai-assistant-hub"
"Bug Tracker" = "https://github.com/Yulikepython/ai-assistant-hub/issues"

[project.scripts]
ai-assistant = "src.main:main"

[tool.setuptools.packages.find]
include = ["src*"]